--- a/BibDesk.bib
+++ b/BibDesk.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Geraint Wiggins at 2019-06-01 18:51:23 +0200 
+%% Created for Geraint Wiggins at 2019-06-07 19:37:51 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{KennedySadeghi13,
+	Address = {Cambridge, UK},
+	Author = {Rodney A. Kennedy and Parastoo Sadeghi},
+	Date-Added = {2019-06-07 19:35:47 +0200},
+	Date-Modified = {2019-06-07 19:36:25 +0200},
+	Publisher = {Cambridge University Press},
+	Title = {Hilbert Space Methods in Signal Processing},
+	Year = {2013}}
 
 @article{WigginsSanjekdar19,
 	Abstract = {In this Hypothesis and Theory paper, we consider the problem of learning deeply structured knowledge representations in the absence of predefined ontologies, and in the context of long-term learning. In particular, we consider this process as a sequence of re-representation steps, of various kinds. The Information Dynamics of Thinking theory (IDyOT) admits such learning, and provides a hypothetical mechanism for the human-like construction of hierarchical memory, with the provision of symbols constructed by the system that embodies the theory. The combination of long-term learning and meaning construction in terms of symbols grounded in perceptual experience entails that the system, like a human, be capable of memory consolidation, to manage the complex and inconsistent structures that can result from learning of information that becomes more complete over time. Such consolidation changes memory structures, and thus changes their meaning. Therefore, memory consolidation entails re-representation, while re-representation entails changes of meaning. Ultimately, the theory proposes that the processes of learning and consolidation should be considered as repeated re-representation of what is learned.
