--- a/HomerWigginsSLSP.tex
+++ b/HomerWigginsSLSP.tex
@@ -10,6 +10,7 @@
 \usepackage{todonotes}
 \usepackage{booktabs}
 \usepackage{tabularx}
+%\usepackage{euler}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
@@ -19,9 +20,9 @@
 \usepackage[numbers,sort&compress]{natbib}
 \begin{document}
 %
-\title{Learning Spectral Representations:\\ Semantic Memory and the\\ Information Dynamics of Thinking}
+\title{Towards Automatic Learning of\\Spectral Semantic Memory Representations}
 %
-\titlerunning{Learning Spectral Representations}
+\titlerunning{Spectral Semantic Memory Representations}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
@@ -39,10 +40,9 @@ School of Electronic Engineering and Computer Science,\\Queen Mary University of
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-The abstract should briefly summarize the contents of the paper in
-150--250 words.
+We present the first computational implementation of a novel theory of knowledge representation. We outline the background theory, Information Dymaics of Thinking, and then explain in detail the mathematical background. The theory includes time and sequence explicitly as part of memory in a new kind of hierarchical deep learning system that self-optimises using an information-theoretic principle. We demonstrate the working of the system and evaluate it qualitatively against the TIMIT speech recognition dataset.
 
-\keywords{Statistical learning  \and Representation Learning \and Information Dynamics.}
+\keywords{Statistical learning  \and Representation Learning and Information Dynamics.}
 \end{abstract}
 %
 %
@@ -55,35 +55,46 @@ In the following sections, we first outline the context of the Information Dynam
 \subsection{Overview}
 \begin{figure}[t]
     \centering
-    \resizebox{.9\linewidth}{!}{\includegraphics{pix/overview}}
-    \caption{Overview of IDyOT components and operation cycle. Rounded boxes are the main IDyOT processes. Cloud shapes represent the phenomena explicated. Arrows are labelled with the operations that connect the main processes. The whole is guided by the information efficiency criterion. Figure and caption reproduced under CC-BY license \cite{WigginsSanjekdar19}.}
+    \resizebox{.8\linewidth}{!}{\includegraphics{pix/overview}}
+    \caption{Overview: IDyOT components and operation cycle. Rounded boxes are the main processes. Cloud shapes represent the phenomena explicated. Arrows show the operations that connect the main processes. The whole is guided by the information efficiency criterion. Figure  reproduced under CC-BY license \cite{WigginsSanjekdar19}.}
     \label{fig:IDyOToverview}
 \end{figure}
-The theory of Information Dynamics of Thinking (IDyOT) is an attempt to capture in an implemented computational model a hypothetical fundamental cognitive process. That process, it is claimed, drives cognition and action in a mind. The theory draws together the processes of (implicit, non-conscious) learning, segmentation of sequences in time, construction of categorical perceptual and semantic representations, and abstraction of data into ontological hierarchies. The motivation of the theory is to be able to predict what happens next in the world, so it accords mostly with the approach of Clark \cite{Clark13}. Like many such theories, it is based on statistical modelling (viewed as a simulation of cognitive process, not as a model of data) and Shannon information theory \citep{Shannon48}. The theory is formulated as one of ``information dynamics'', and not as one of ``free energy''  \citep{Friston10}, because there is evidence (from music cognition studies  \citep{Huron06,PearceWiggins12,HansenPearce14}) that humans are directly sensitive to the quantity of Shannon entropy in perceived data, and so  grander physical metaphor is superfluous.
+The theory of Information Dynamics of Thinking (IDyOT) is an attempt to capture in an implemented computational model a hypothetical fundamental cognitive process. That process, it is claimed, drives cognition and action in a mind. The theory draws together the processes of (implicit, non-conscious) learning, segmentation of sequences in time, construction of categorical perceptual and semantic representations, and abstraction of data into ontological hierarchies. The motivation of the theory is to predict what will happen next in the world, according with Clark \cite{Clark13}. IDyOT is based on statistical modelling (viewed as a simulation of cognitive process, not as a model of data) and Shannon information theory \citep{Shannon48}. The theory is formulated as one of ``information dynamics'', and not as one of ``free energy''  \citep{Friston10}, because it seems (from music cognition studies  \citep{Huron06,PearceWiggins12,HansenPearce14}) that humans are directly sensitive to the quantity of Shannon entropy in perceived data, and so  grander physical metaphor is superfluous.
 
 The IDyOT process is illustrated in Fig.~\ref{fig:IDyOToverview}. It operates over 
 % this bit taken directly from Frontiers paper - needs reworking
-input sequences at a given basic level of representation---here, the vectors of a Fourier Transform of human speech. These sequences are segmented using boundary entropy \cite{SproatShihEtAl94}, which we explain below. Each segment so produced is then represented as a temporal trajectory in a geometrical space of dimension and scale appropriate to its particular input type.  This space becomes the semantic space of the data level with which it is associated. As the sequence is so segmented and recorded, a superordinate sequential and semantic layer is constructed, from vectors determined by spectral transforms of the multidimensional sequences at the subordinate layer. The representations are spectral because this mathematical approach allows comparison of sequences of varying lengths, each represented by a single point in the superordinate space; in our case, the spectral transformation is the standard Fourier Transform \cite{?}. In the current initial experiments, the geometry of the superordinate space is Euclidean. However, in general, that geometry is constructed by an inner product function that induces a norm (distance) that models similarity in this particular space.
+input sequences at a given basic level of representation---here, the vectors of a Fourier Transform of human speech. These sequences are segmented using boundary entropy \cite{SproatShihEtAl94}, which we explain below. Each segment so produced is then represented as a temporal trajectory in a geometrical space of dimension and scale appropriate to its particular input type.  This space becomes the semantic space of the data level with which it is associated. As the sequence is so segmented and recorded, a superordinate sequential and semantic layer is constructed, from vectors determined by spectral transforms of the multidimensional sequences at the subordinate layer. The representations are spectral because this mathematical approach allows comparison of sequences of varying lengths, each represented by a single point in the superordinate space; in our case, the spectral transformation is the standard Fourier Transform \cite{KennedySadeghi13}. In the current exploratory experiments, the geometry of the superordinate space is Euclidean. However, in general, it may ve constructed by an inner product function that induces a norm (distance) that models similarity in the particular space.
 
-The whole process is guided by an information efficiency criterion, expressed domain-independently in terms of a Shannon-type estimate of the average number of bits required to represent each symbol in the learned memory. In what follows, we refer to this quantity as {\it mean information content}; the estimated number of bits to required to represent a signal is called the {\it information content}.
+The whole process is guided by an information efficiency criterion, expressed domain-independently in terms of a Shannon-type estimate of the average number of bits required to represent each symbol in the learned memory. We refer to this quantity as {\it mean information content}; the estimated number of bits to required to represent a signal is called the {\it information content}.
 
 \subsection{Perceptual Segmentation by Boundary Entropy}
-\subsection{Conceptual Spaces}
-\cite{Gardenfors00,Gardenfors14}
+
+Given a non-zero-order statistical model, such as a bigram model, of sequential data, it is possible to calculate the predicted likelihood of a given symbol, $s$, arising in a context $c$, which has given rise to a distribution $D$ over the alphabet, $A$. $p_s$ is the probability (from $D$) of the symbol $s$ at this point. Shannon \citep{Shannon48} defines the {\it entropy}, $H$, of the distribution from which $s$ is drawn to be 
+$H(s|c)=-\sum_{s\in A}\log_2P(s|c)$.
+MacKay \citep{MacKay03} applies the formula to individual symbols in context, to give the {\it information content},
+$h(s|c)=-\log_2P(s|c)$.
+
+The quantity of information content, which estimates unexpectedness in context, can be used, especially with higher-order models, to predict boundaries in structured sequences. This works because, as one proceeds through a sequence of whose structure one has a model, one gains information about the part of that sequence that one is currently experiencing. Therefore, unexpectedness, on average, decreases, because one is able to predict more and more accurately what is coming next. However, at the end of such a structure, there is no information in context to carry forward. Therefore, information content of the symbol at the start of a structure is usually greater than the one before it.
+This phenomenon has been demonstrated in Chinese text \cite{SproatShihEtAl94}, musical melody \citep{PearceMullensiefenEtAl10}, and multidimensional speech representations  \citep{Wiggins10a}.
+
+Much of the work conducted on this kind of statistical modelling in linguistics uses mixed-order models via algorithms such as Prediction by Partial Match, PPM \citep{ClearyWitten84}. These work well, but do not constitute explanatory cognitive models; there is no claim that this is actually how humans predict. The current work aims to supply such an explanatory model, by opening the black box of PPM and positing a cognitively credible alternative.
+
 \subsection{Spectral Representations of Meaning}
-\cite[][\S7.2.5]{Wiggins18}
+G\"ardenfors \cite{Gardenfors00,Gardenfors14} proposes a system of low-dimensional continous spaces as a knowledge representation that lies between the high-dimensional, inscrutable continuous representations of neural networks and the discrete representations of logic. The representation proposed here is inspired by this work, though it does not strictly conform to G\"ardenfors' proposal.
+
+Here, we represent perceptual meaning on multiple hierarchical levels, each level being an abstraction of the one below it. The lowest level is, in the current case, a spectral representation of a speech signal, but could in principle be any representation of sensory input.
+
+The specific question that we are interested in, in terms of knowledge representation, is how to represent sequences in such a way that sequence length is not a barrier to effective comparison of sequence content. This is an issue in, for example, string matching, where algorithms such as dynamic programming are used to find the optimal match under deletion and character-wise similarity heuristics. Chella et al.~\citep{ChellaDindoEtAl07} propose using Fourier transforms of robot movements to summarise and categorise them in a continuous space. Here, we take this idea further, using the transforms to generate successive levels of more abstract representation. Time is thus abstracted out of similarity, but in a way structured by the segments at the successive levels, constituting a testable theory of perceptual similarity (to be tested elsewhere).
+Wiggins \cite[][\S7.2.5]{Wiggins18} gives arguments as to why Fourier transforms are a candidate representation here.
+
 \subsection{The Information Dynamics of Thinking}
 
-\paragraph{Segmentation}
-\paragraph{Categorisation}
-\paragraph{Abstraction}
-\paragraph{Prediction}
+IDyOT theory posits a cycle as shown in Fig.~\ref{fig:IDyOToverview}. Sensory input is received, and a simple bigram model is built incrementally. The model is used to segment the input sequence, using boundary entropy, outlined above and described in detail below. Each time a new segment is identified, it is abstracted by Fourier transform to a level ``above'' the initial sequence. This abstraction is a point in a new representation space. Points in this space are categorised, and the centroid of the category so formed is used to represent the subordinate sequence at the superordinate level. The criteria for categorisation are domain independent, and based on the information content of the whole model, again explained below. This process is applied recursively, upwards: each time a new segment is identified at any level, the same process applied immediately above. Because real time is recorded in the sequence, it is reflected in a structured way in the transforms. The hierarchical model so produced is then used to improve the predictions of the next input. A process of post-hoc memory consolidation is also defined \citep{Wiggins18,WigginsSanjekdar19}, but is not implemented in the current model.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Implemented Model}
-{\it Steve to do from here on...}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
